--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 ALLOWED_EMAILS=just.johnpark@gmail.com,profsmallpine@gmail.com,isaacnoda@gmail.com
 BASE_URL=http://localhost:8080
+ENVIRONMENT=development
 EMAIL_FROM=email@gmail.com
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PASSWORD=TODO
