--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,30 +7,9 @@ env:
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 jobs:
   deploy:
-    name: Build + deploy app
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set up Go 1.18
-        uses: actions/setup-go@v1
-        with:
-          go-version: 1.18
-
-      - name: Check out source code
-        uses: actions/checkout@v2
-
-      - name: Cache go modules
-        uses: actions/cache@v1
-        with:
-          path: ~/go/pkg/mod
-          key: go-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            go-
-
-      - name: Setup fly
-        uses: superfly/flyctl-actions/setup-flyctl@master
-      
-      - name: Fly deploy
-        run: |
-          go build
-          ls -la
-          flyctl deploy --remote-only
+      name: Deploy app
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v2
+        - uses: superfly/flyctl-actions/setup-flyctl@master
+        - run: flyctl deploy --remote-only
