Setups up build config in fly.toml

--- a/fly.toml
+++ b/fly.toml
@@ -5,6 +5,10 @@ kill_signal = "SIGINT"
 kill_timeout = 5
 processes = []
 
+[build]
+  builder = "paketobuildpacks/builder:base"
+  buildpacks = ["gcr.io/paketo-buildpacks/go"]
+
 [env]
   BASE_URL = "https://privatenotes.group"
   EMAIL_HOST = "smtp.gmail.com"
